# LangChain-POC

./: .gitignore  README.md  pyproject.toml
skills/ascii-art/: SKILL.md
skills/ascii-art/references/: digits.txt
src/langchain_poc/: __init__.py  agent.py  api.py  config.py  schemas.py  streaming.py  tools.py
src/langchain_poc/agent_as_tool/: __init__.py  agent.py
src/langchain_poc/deepagents/: __init__.py  agent.py
