[project]
name = "langchain-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael McMasters", email = "jmcmasters411@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
]

[project.scripts]
langchain-poc = "langchain_poc:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
