[project]
name = "langchain-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael McMasters", email = "jmcmasters411@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.50.2",
]

[project.scripts]
langchain-poc = "langchain_poc:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
